feat: detalhar atividade e campos de notas
